<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SupportActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_500"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@null"
                android:drawableStart="@drawable/ic_back"
                android:drawableTint="@color/white" />


            <TextView
                android:layout_width="280sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/support"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        android:layout_margin="26dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/all_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support_contact"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        android:textSize="15sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/all_questions"
        app:layout_constraintTop_toBottomOf="@id/all_questions"
        android:text="@string/director_phone"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:layout_marginTop="16dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/phone"
        app:layout_constraintTop_toBottomOf="@id/phone"
        android:text="@string/director_email"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:layout_marginTop="16dp"
        android:textSize="15sp"/>






</androidx.constraintlayout.widget.ConstraintLayout>