<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_500"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:drawableTint="@color/white"
                android:drawableStart="@drawable/ic_back"
                android:background="@null" />

            <TextView
                android:layout_width="180sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/product_sell"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/et_amount_sell"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/amount_product"/>

    <EditText
        android:id="@+id/et_sell_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_price_product"
        app:layout_constraintStart_toStartOf="@id/et_amount_sell"
        app:layout_constraintTop_toBottomOf="@id/et_amount_sell"
        app:layout_constraintEnd_toEndOf="@id/et_amount_sell"
        android:layout_margin="12dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:layout_margin="22dp"
        android:text="@string/sell"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"/>




</androidx.constraintlayout.widget.ConstraintLayout>